디테일페이지추가

--- a/src/App.css
+++ b/src/App.css
@@ -14,4 +14,6 @@ body {
   align-items: center;
   background-image: url('../public/img/mac-wallpaper.png');
   background-size: cover;
+  background-position: center;
 }
+
