--- a/src/App.css
+++ b/src/App.css
@@ -17,3 +17,12 @@ body {
   background-position: center;
 }
 
+.IconWrapper {
+  position: fixed;
+  right: 20px;
+  top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
